@@ -5,7 +5,7 @@ use inc::Module::Install;
 
 # Definition.
 abstract 'Perl class for reading a graph from TGF format with CSV labeling.';
-author 'Michal Spacek <skim@cpan.org>';
+author 'Michal Josef Spacek <skim@cpan.org>';
 author_requires 'English' => 0;
 author_requires 'File::Object' => 0.07;
 author_requires 'Test::More' => 0;
