@@ -2,6 +2,7 @@
  - Improve LICENSE AND COPYRIGHT section in doc.
  - Update Module::Install to 1.19 version.
  - Update author github username.
+ - Update author name.
 
 0.02 2015-10-29T16:32:14+01:00
  - Fix LICENSE file.
